--- a/packages/api-reference/index.html
+++ b/packages/api-reference/index.html
@@ -23,6 +23,7 @@
           {
             title: 'Scalar Galaxy', // optional, would fallback to 'API #1'
             slug: 'scalar-galaxy', // optional, would be auto-generated from the title or the index
+            // TODO: Remove example before merging
             // url: 'https://cdn.jsdelivr.net/npm/@scalar/galaxy/dist/latest.json',
             content: {
               openapi: '3.1.0',
