fix(api-client): add new tailwind styles to modal and app

--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="light-mode">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -15,7 +17,7 @@
       content="width=device-width, initial-scale=1.0" />
     <title>Scalar API Reference</title>
   </head>
-  <body class="light-mode">
+  <body>
     <div id="root"></div>
     <script
       type="module"
