--- a/packages/api-client/playground/modal/index.html
+++ b/packages/api-client/playground/modal/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="light-mode">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -11,7 +13,7 @@
       content="width=device-width, initial-scale=1.0" />
     <title>Scalar API Client Modal</title>
   </head>
-  <body class="light-mode">
+  <body>
     <main
       style="
         width: 100vw;
