--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="light-mode">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -16,7 +18,7 @@
     <title>Scalar API Reference</title>
   </head>
 
-  <body class="light-mode">
+  <body>
     <div id="app"></div>
     <script
       type="module"
